# pwr-high-performace-computing

./: .gitignore  README.md
task1/: CMakeLists.txt  pollard_rho.cpp  task.md
task2/: CMakeLists.txt
task2/clauses/: example_clauses.cpp
task2/hello/: c_hello.cpp  example_hello.cpp
task2/loop/: c_loop.cpp  example_loop.cpp
task2/schedule/: schedule.cpp
task3/: pollard_rho.cpp
task4/: CMakeLists.txt  pollard_lambda.cpp
task5/: CMakeLists.txt  README.md  arguments.txt  arguments2.txt  arguments3.txt  arguments4.txt  pollard_lambda.cpp
task6/: CMakeLists.txt  lenstra_ecm.cpp
task6.1/: group.py
